fix: change popup visibility

--- a/shelter/src/pets/style.scss
+++ b/shelter/src/pets/style.scss
@@ -130,10 +130,13 @@
             background-color: rgba(0, 0, 0, 0.8);
             top: 0;
             left: 0;
-            z-index: 2;
+            /*   z-index: 2; */
             display: flex;
             align-items: center;
             justify-content: center;
+            opacity: 0;
+            visibility: hidden;
+
 
             .modal-window {
                 padding-right: 20px;
@@ -149,6 +152,7 @@
                 z-index: 10;
                 border-radius: 9px;
                 box-sizing: border-box;
+
 
                 .modal-image {
                     padding-left: 17px;
